--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-
+    <h1>Calculadora Experimental</h1>
+    <fieldset>
+        <p id="visor">
+            <input type="text" id="valores" size="80" maxlength="80">
+        </p>
+        <p id="calc">
+            <input type="button" value="1" id="calc"><input type="button" value="2" id="calc"><input type="button" value="3" id="calc"><input type="button" value="+" id="calc"><br/>
+            <input type="button" value="4" id="calc"><input type="button" value="5" id="calc"><input type="button" value="6" id="calc"><input type="button" value="-" id="calc"><br/>
+            <input type="button" value="7" id="calc"><input type="button" value="8" id="calc"><input type="button" value="9" id="calc"><input type="button" value="*" id="calc"><br/>
+            <input type="button" value="DEL" id="calc"><input type="button" value="0" id="calc"><input type="button" value="Raiz" id="calc"><input type="button" value="/" id="calc"><br/>
+        </p>
+    </fieldset>
 </body>
 
 </html>
